syntax = "proto3";

package pb;
import "barber/barber_shop.proto";
import "barber/time_of_day.proto";
import "google/protobuf/wrappers.proto";

option go_package = "barbershop/src/pb/barber";


message UpdateBarberShopRequest {
    optional string name = 1;
    optional int32 facility = 2;
    optional string address = 3;
    optional google.protobuf.DoubleValue latitude = 4;
    optional google.protobuf.DoubleValue longtude = 5;
    optional string image = 6;
    optional TimeOfDay start_time = 7;
    optional TimeOfDay end_time = 8;
    optional TimeOfDay break_time = 9;
    optional int32 break_minutes = 10;
    optional int32 status = 11;
    optional int32 interval_sheduler = 12;
    string shopId = 13;
}

message UpdateBarberShopResponse {
    BarberShop barber_shop = 1;
}